# radex

./: .gitignore  activity.py  calibrate.py  calibrate.spec  config.ini  count_statistics.py  do_std_sources.py  extract_dicom_spectrum.py  file_handler.py  known_sources.py  main.py  main.spec  physics.py  print_spectrum.py  pyproject.toml  ra223sources.py  radex.spec  radium_log.xlsx  radiumlog.py  requirements.txt  requirements_dev.txt  setup.cfg  spectrum.py  spectrum_analysis_model.py  spectrum_plotter.py  tox.ini  utils.py
.github/workflows/: tests.yml
doc/: JHEP.bst  radex.bib  radex.tex
doc/Ra-223_windows/: main.tex  plotter.m  raspec.eps  raspec_fwhm.eps
known_sources/ra223/: kilde 1.txt  src.txt
ra223-src/Bg/: 00000001.dcm  00000003.dcm
ra223-src/Bg2/: 00000001.dcm  00000002.dcm
ra223-src/kilde1/: 00000001.dcm
ra223-src/kilde1_2/: 00000001.dcm  00000002.dcm
ra223-src/kilde2/: 00000002.dcm  00000003.dcm
ra223-src/spectra/: Bg 2.txt  Bg.txt  Kilde 1+2.txt  Kilde 1+2_Bg 2.txt  Kilde 1+2_Bg.txt  kilde 1.txt  kilde 1_Bg.txt  kilde 2.txt  kilde 2_Bg 2.txt  kilde 2_Bg.txt
src/: calibrate.py  main.py  print_spectrum.py  radex.ini
src/radex/: __init__.py  __init__.pyi  __main__.py  calibrate.py  do_std_sources.py  extract_dicom_spectrum.py  file_handler.py  known_sources.py  physics.py  print_spectrum.py  radiumlog.py  spectrum.py  spectrum_analysis_model.py  spectrum_plotter.py  utils.py
test/: test_activity.py  test_count_statistics.py  test_extract_dicom_spectrum.py  test_file_handler.py  test_physics.py  test_spectrum.py  test_spectrum_analysis_model.py  test_utils.py
train/: cal20210616.txt  src.txt
train/PA1x/ST1/SE1/: 00000001.dcm  00000002.dcm  00000003.dcm
train/PA1x/ST1/SE2/: 00000001.dcm  00000002.dcm  00000003.dcm
train/PA1x/ST1/SE3/: 00000001.dcm  00000002.dcm  00000003.dcm
train/PA1x/ST1/SE4/: 00000001.dcm  (+2 more)
train/cal/: sens.txt  src.txt  tc2.txt
(+49 files in other folders)
