[metadata]
# replace with your username:
name = radex
version = 1.0.1
author = Chris Walther Andersen
author_email = christian.walther.andersen@rsyd.dk
description = Radium detection from dicom spectra
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cwand/radex
project_urls =
	Bug Tracker = https://github.com/cwand/radex/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = radex
install_requires =
	numpy>=1.20
	scipy>=1.7
	pydicom>=2.0
	openpyxl>=3.0
	matplotlib>=3.0
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
testing =
	pytest>=6.0
	pytest-cov>=2.0
	mypy>=0.910
	flake8>=3.9
	tox>=3.24

[options.package_data]
radex = py.typed

[flake8]
max-line-length = 100
# ignore = W191,E128
