[metadata]
# replace with your username:
name = radex
version = 1.0.1
author = Chris Walther Andersen
author_email = cvvand@gmail.com
description = Radium spectrum analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cwand/radex
project_urls =
	Bug Tracker = https://github.com/cwand/radex/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = radex
install_requires =
	numpy>=1.23
	pydicom>=2.4
	openpyxl>=3.1
	scipy>=1.11
	matplotlib>=3.8
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
testing =
	pytest>=7.3
	pytest-cov>=4.0
	mypy>=1.3
	flake8>=6.0
	tox>=4.5

[options.package_data]
funnyapp = py.typed

[flake8]
max-line-length = 100
ignore = W191,E128
